--- a/app/src/main/res/layout/item_history_rv.xml
+++ b/app/src/main/res/layout/item_history_rv.xml
@@ -12,61 +12,51 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:textSize="20sp"
+        android:textSize="15sp"
         android:textStyle="bold"
         android:gravity="center"
         />
 
-    <View
-        android:layout_width="1dp"
-        android:layout_height="match_parent"
-        android:background="@color/black"
-        android:layout_marginRight="4dp"
-        />
 
     <TextView
         android:id="@+id/tvWeightItem"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:textSize="20sp"
+        android:textSize="15sp"
         android:textStyle="bold"
         android:gravity="center"
         />
 
-    <View
-        android:layout_width="1dp"
-        android:layout_height="match_parent"
-        android:background="@color/black"
-        android:layout_marginRight="4dp"
-
-        />
 
     <TextView
         android:id="@+id/tvHeightItem"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:textSize="20sp"
+        android:textSize="15sp"
         android:textStyle="bold"
         android:gravity="center"
         />
 
-    <View
-        android:layout_width="1dp"
-        android:layout_height="match_parent"
-        android:background="@color/black"
-        android:layout_marginRight="4dp"
-        />
 
     <TextView
         android:id="@+id/tvImcItem"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:textSize="20sp"
+        android:textSize="15sp"
         android:textStyle="bold"
         android:gravity="center"
         />
+
+    <ImageView
+        android:id="@+id/ivDelete"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:contentDescription="image"
+        android:foreground="?attr/selectableItemBackgroundBorderless"
+        android:scaleType="center"
+        android:src="@drawable/ic_baseline_delete" />
 
 </LinearLayout>
