--- a/app/src/main/res/layout/activity_imc_history.xml
+++ b/app/src/main/res/layout/activity_imc_history.xml
@@ -27,6 +27,7 @@
         android:visibility="gone"
         tools:visibility="visible"
         android:layout_marginEnd="50dp"
+        android:layout_marginTop="15dp"
         >
 
         <TextView
@@ -80,14 +81,20 @@
             />
     </LinearLayout>
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rvHistory"
+    <ScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toBottomOf="@id/llTable"
         android:layout_marginTop="10sp"
-        android:visibility="gone"
-        tools:visibility="visible"/>
+        >
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rvHistory"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:visibility="gone"
+            tools:visibility="visible"/>
+    </ScrollView>
+
 
     <TextView
         android:id="@+id/tvNoImc"
